Wyczyszczenie i refaktoryzacja metody kontrolera endpointu /ads, przygotowanie api.yml na nowe parametry tej metody, odblokowanie endpointu /ads w gateway.
